--- a/css/main.css
+++ b/css/main.css
@@ -23,15 +23,18 @@ body, html {
     font-size: 30px;
     padding-top: 80px;
 }
+
 .subtitle {
     text-align: center;
     font-size: 16px;
     font-weight: 400;
     color: #040404;
 }
+
 select, input {
     padding: 14px 17px;
 }
+
 /* Header */
 
 #header {
@@ -140,6 +143,7 @@ select, input {
     -o-transition: all 0.3s ease;
     ;
     transition: all 0.3s ease;
+    outline: none !important;
 }
 
 .header__redBtn:hover {
@@ -307,30 +311,37 @@ input, textarea, select {
 /* Consult Section */
 
 #consult {
-    background-color:#dbdbdb;
+    background-color: #dbdbdb;
 }
+
 .consult__row {
     margin: 40px;
     border: 5px solid #fff;
     padding: 55px;
 }
-.consult__row p { /* Продублировал код */
+
+.consult__row p {
+    /* Продублировал код */
     font-weight: 700;
     font-size: 13px;
     padding-top: 20px;
     padding-bottom: 7px;
 }
+
 .consult__btn {
     margin-top: 40px;
 }
+
 .consult__form {
-   padding-bottom: 77px;
+    padding-bottom: 77px;
 }
+
 .consult__subtitle {
     padding-top: 21px;
 }
 
 /* Map section */
+
 #map {
     background-image: url(/img/map_bg.png);
     background-repeat: no-repeat;
@@ -338,26 +349,31 @@ input, textarea, select {
     background-size: cover;
     color: #fff;
 }
+
 .map__content {
     background-color: #d91233;
     margin-top: 50px;
     margin-bottom: 190px;
 }
+
 .map__title {
     font-weight: 70;
     font-size: 24px;
     padding-top: 60px;
 }
+
 .map__address {
     font-weight: 400;
     font-size: 20px;
     padding-top: 45px;
 }
+
 .map__phone {
     font-weight: 700;
     font-size: 20px;
     padding-top: 30px;
 }
+
 .map__link {
     color: #fff;
     text-decoration: underline;
@@ -367,15 +383,16 @@ input, textarea, select {
 }
 
 /* Footer */
+
 .footer__row {
     color: #000;
     background: #fff;
     padding-bottom: 30px;
 }
+
 .footer__phoneNumber {
     color: #000;
 }
-
 
 /* Modal window */
 
@@ -388,9 +405,14 @@ input, textarea, select {
     z-index: 1;
 }
 
+.modal input {
+    border: 1px solid #eaeaea;
+    width: 80%;
+}
+
 .modal__row {}
 
-.modal__top {
+.modal__box {
     background-color: #fefefe;
     margin: 15% auto;
     border: 1px solid #888;
@@ -399,6 +421,15 @@ input, textarea, select {
     font-size: 14px;
     font-weight: 400;
     position: relative;
+}
+
+.modal__input {
+    margin-bottom: 10px;
+}
+
+.modal__btn {
+    margin-top: 5px;
+    margin-bottom: 43px;
 }
 
 .modal__cross {
@@ -410,7 +441,7 @@ input, textarea, select {
     position: absolute;
 }
 
-.modal__top span {
+.modal__box span {
     font-size: 16px;
     font-weight: 700;
     line-height: 1.5em;
@@ -418,6 +449,14 @@ input, textarea, select {
 
 .modal__text {
     margin: 15% 10%;
+}
+
+.modal__thanks {
+    display: none;
+}
+
+.modal__callback {
+    display: none;
 }
 
 @media screen and (max-width: 992px) {
@@ -451,10 +490,9 @@ input, textarea, select {
         margin: 40px;
         padding: 25px;
     }
-    
 }
-@media screen and (max-width: 576px) {
 
+@media screen and (max-width: 576px) {
     /* .consult__btn > .header__redBtn {
         padding: 10px 15px;
     } */
