--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,13 @@
 @font-face {
     font-family: 'Lato';
-    src: url(/fonts/Lato-Regular.ttf);
+    src: url(fonts/Lato-Regular.ttf);
     font-weight: 400;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Lato';
-    src: url(/fonts/Lato-Bold.ttf);
+    src: url(fonts/Lato-Bold.ttf);
     font-style: normal;
     font-weight: 700;
 }
@@ -43,7 +43,7 @@ select, input {
 /* Header */
 
 #header {
-    background: linear-gradient(to bottom, #252524 0px, transparent 90px), url(/img/bg-header.png);
+    background: linear-gradient(to bottom, #252524 0px, transparent 90px), url(img/bg-header.png);
     background-image: ;
     background-repeat: no-repeat;
     background-position: center center;
@@ -355,7 +355,7 @@ input, textarea, select {
 /* Map section */
 
 #map {
-    background-image: url(/img/map_bg.png);
+    background-image: url(img/map_bg.png);
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
@@ -453,7 +453,7 @@ input, textarea, select {
 }
 
 .modal__cross {
-    background-image: url(/img/icons/cross.png);
+    background-image: url(img/icons/cross.png);
     width: 22px;
     height: 22px;
     top: 0;
